<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.freefalltech.bikeshare.SidebarActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:textSize="30sp"
        android:layout_margin="30sp"
        android:onClick="returnBack"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myAccount"
            android:textAlignment="center"

            android:textSize="20sp"
            android:layout_margin="30sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myactivityString"
            android:onClick="myActivityIntent"
            android:layout_margin="30sp"
            android:textSize="20sp"
            android:textAlignment="center"

            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F L E E T  M A N A G E M E N T"
            android:layout_margin="30sp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logOut"
            android:layout_margin="30sp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>
